scss align-items fixing

--- a/frontend-to-do-list/src/components/shared/Header/Header.scss
+++ b/frontend-to-do-list/src/components/shared/Header/Header.scss
@@ -17,7 +17,7 @@
     list-style: none;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     &-item{
         padding: 1.3% 5%;
         color: rgba(255, 255, 255, 0.892);
